; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/core/oss/extr_mixer_oss.c_snd_mixer_oss_caps.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/core/oss/extr_mixer_oss.c_snd_mixer_oss_caps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_mixer_oss_file = type { %struct.snd_mixer_oss* }
%struct.snd_mixer_oss = type { i64, i64 }

@EIO = common dso_local global i32 0, align 4
@SOUND_CAP_EXCL_INPUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_mixer_oss_file*)* @snd_mixer_oss_caps to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @snd_mixer_oss_caps(%struct.snd_mixer_oss_file* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.snd_mixer_oss_file*, align 8
  %4 = alloca %struct.snd_mixer_oss*, align 8
  %5 = alloca i32, align 4
  store %struct.snd_mixer_oss_file* %0, %struct.snd_mixer_oss_file** %3, align 8
  %6 = load %struct.snd_mixer_oss_file*, %struct.snd_mixer_oss_file** %3, align 8
  %7 = getelementptr inbounds %struct.snd_mixer_oss_file, %struct.snd_mixer_oss_file* %6, i32 0, i32 0
  %8 = load %struct.snd_mixer_oss*, %struct.snd_mixer_oss** %7, align 8
  store %struct.snd_mixer_oss* %8, %struct.snd_mixer_oss** %4, align 8
  store i32 0, i32* %5, align 4
  %9 = load %struct.snd_mixer_oss*, %struct.snd_mixer_oss** %4, align 8
  %10 = icmp eq %struct.snd_mixer_oss* %9, null
  br i1 %10, label %11, label %14

11:                                               ; preds = %1
  %12 = load i32, i32* @EIO, align 4
  %13 = sub nsw i32 0, %12
  store i32 %13, i32* %2, align 4
  br label %30

14:                                               ; preds = %1
  %15 = load %struct.snd_mixer_oss*, %struct.snd_mixer_oss** %4, align 8
  %16 = getelementptr inbounds %struct.snd_mixer_oss, %struct.snd_mixer_oss* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %28

19:                                               ; preds = %14
  %20 = load %struct.snd_mixer_oss*, %struct.snd_mixer_oss** %4, align 8
  %21 = getelementptr inbounds %struct.snd_mixer_oss, %struct.snd_mixer_oss* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %28

24:                                               ; preds = %19
  %25 = load i32, i32* @SOUND_CAP_EXCL_INPUT, align 4
  %26 = load i32, i32* %5, align 4
  %27 = or i32 %26, %25
  store i32 %27, i32* %5, align 4
  br label %28

28:                                               ; preds = %24, %19, %14
  %29 = load i32, i32* %5, align 4
  store i32 %29, i32* %2, align 4
  br label %30

30:                                               ; preds = %28, %11
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
